feat(backend): add dynamic configuration
